--- a/qs.html
+++ b/qs.html
@@ -63,10 +63,8 @@
 </nav>
 
     <article class="gradient-custom">
-        <h1 style="text-align: center;">QUIENES</h1>
-        <h1 style="text-align: center;">SOMOS</h1>
-        <div class="container mt-4 pb-4">
-  <div class="container my-4">
+        <div class="container  pb-4">
+  <div class="container pt-4 mb-4">
   <div class="row align-items-center flex-column flex-lg-row">
 
     <!-- Imagen 1 -->
