--- a/registro.html
+++ b/registro.html
@@ -89,6 +89,7 @@
         </div>
       </div>
     </nav>
+     <!-- Contenido principal -->
     <section class="vh-80 gradient-custom">
       <div class="container py-5 h-100">
         <div class="row d-flex justify-content-center align-items-center h-100">
