--- a/acercade.html
+++ b/acercade.html
@@ -59,14 +59,15 @@
     </div>
   </div>
 </nav>
-    <div class="gradient-custom">
+<!-- Contenido Principal -->
+    <section class="gradient-custom">
         <br><br>
         <h5 class="text-white parrafo">
-            Nosotros vivimos en Corrientes Capital, y tenemos una moto Honda Xr 190l, nuestra compañera de aventuras.
-De este modo, si quieren enterarse de reseñas, tips o simplemente conocer nuevos lugares, siganos en nuestra redes sociales, que pronto subiremos contenido nuevo!
-        </h1>
+                Nosotros vivimos en Corrientes Capital, y tenemos una moto Honda Xr 190l, nuestra compañera de aventuras.
+    De este modo, si quieren enterarse de reseñas, tips o simplemente conocer nuevos lugares, siganos en nuestra redes sociales, que pronto subiremos contenido nuevo!
+        </h5>
     <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113262.71073769982!2d-58.87478906334981!3d-27.486075094710582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94456b79d5bed36b%3A0xfa999f1ef3b40646!2sCorrientes!5e0!3m2!1ses!2sar!4v1748822597692!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
-    </div>
+    </section>
     <footer class="bg-dark text-white py-4">
         <h3 class="text-center">Redes Sociales</h3>
         <div class="d-flex justify-content-center">
