--- a/Principal.html
+++ b/Principal.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Talentos Digitales</title>
+    <!-- Impotacion -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,6 +36,7 @@
       />
       <h1 class="text-center">Inicio</h1>
     </header>
+    <!-- Barra de navegacion -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <!-- Boton desplegable -->
